# Nicopal

./: LICENSE.txt  README.md  pyproject.toml
formats/format.alut/: boron.alut  carbon.alut  cesium.alut  chlorine.alut  cobalt.alut  iodine.alut  iridium.alut  iron.alut  lithium.alut  magnesium.alut  manganese.alut  mercury.alut  neon.alut  nickel.alut  nitrogen.alut  osmium.alut  oxygen.alut  radium.alut  rubidium.alut  selenium.alut  silicon.alut  silver.alut  sodium.alut  sulfur.alut  uranium.alut  vanadium.alut  zinc.alut
formats/format.json/: boron.json  chlorine.json  iridium.json  lithium.json  radium.json  rubidium.json  silicon.json  sulfur.json
formats/format.mat/: boron.mat  carbon.mat  cesium.mat  chlorine.mat  cobalt.mat  iodine.mat  iridium.mat  iron.mat  lithium.mat  magnesium.mat  manganese.mat  mercury.mat  neon.mat  nickel.mat  nitrogen.mat  osmium.mat  oxygen.mat  radium.mat  rubidium.mat  selenium.mat  silicon.mat  silver.mat  sodium.mat  sulfur.mat  uranium.mat  vanadium.mat  zinc.mat
formats/format.r/: boron.r  carbon.r  cesium.r  chlorine.r  cobalt.r  iodine.r  iridium.r  iron.r  lithium.r  magnesium.r  manganese.r  mercury.r  neon.r  nickel.r  nitrogen.r  osmium.r  oxygen.r  radium.r  rubidium.r  selenium.r  silicon.r  silver.r  sodium.r  sulfur.r  uranium.r  vanadium.r  zinc.r
formats/format.rgb/: boron.rgb  carbon.rgb  cesium.rgb  chlorine.rgb  cobalt.rgb  iodine.rgb  iridium.rgb  iron.rgb  lithium.rgb  magnesium.rgb  manganese.rgb  mercury.rgb  neon.rgb  nickel.rgb  (+13 more)
nicopal/: __init__.py  __version__.py  exceptions.py  loader.py  palettes.py
nicopal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+159 files in other folders)
