[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nicopal"
version = "0.6.1"
description = "Nicopal: colour palettes designed for everyone."
readme = "README.md"
authors = [{name = "Nicolas Tharaud", email="n.tharaud6@gmail.com"}]
license = {file="LICENSE"}
keywords = ["color", "palettes", "accessibility", "scientific", "color-deficiency"]
dependencies = ["matplotlib","numpy"]

[tool.setuptools.package-data]
nicopal = ["data/*"]

[project.urls]
Homepage = "https://github.com/nicolastharaud"